# Reddit-Scraping

./: .gitignore  .terraform.lock.hcl  README.md  dev.tfvars  example_reddit.cfg  main.tf  prd.tfvars  pyproject.toml  requirements.txt  variable.tf
.github/workflows/: workflow.yml
lambdaFunctions/getRedditDataFunction/: lambda_function.py  redditUtils.py  test_lambda.py
lambda_functions/get_reddit_data_function/: lambda_function.py  reddit_utils.py  table_definition.py  test_lambda.py
scripts/: zipLambdaFunction.sh  zipPythonPackage.sh
